spark things